--- a/sample1.html
+++ b/sample1.html
@@ -38,17 +38,17 @@ color:orange;
 <p id="para2">
  this is paragraph2
 </p>
- this is sample text3 this is sample text3
+ this is sample  this is sample text3
 
 <p id="para3">
- this is paragraph3
+ this is old paragraph3
 </p>
  this is sample text4 this is sample text4
 
 
 
 
-
+thankyou
 
 </body>
 
